[package]
name = "mooncap"
version = "0.1.0"
edition = "2021"
description = "A TUI crypto market cap monitor powered by DexScreener"
license = "MIT"
authors = ["sudosuanjal"]

[features]
default = []
audio = ["rodio"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rodio = { version = "0.19", optional = true }
chrono = "0.4"
